# ghost

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  TODO.md  codecov.yml  deny.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  stale.yml
VMDragonSlayer/: PR.md  README.md  validate_fuzzer.py
VMDragonSlayer/crashes/: crash_000001  crash_000001.json  crash_000002  crash_000002.json  crash_000003  crash_000003.json  crash_000004  crash_000004.json  crash_000005  crash_000005.json  crash_000006  crash_000006.json  crash_000007  crash_000007.json  crash_000008  crash_000008.json  crash_000009  crash_000009.json  crash_000010  crash_000010.json  crash_000011.json  crash_000012  crash_000012.json  crash_000013  crash_000013.json  crash_000014.json  crash_000015  crash_000015.json  crash_000016.json  crash_000017  crash_000017.json  crash_000018.json  crash_000019  crash_000019.json  crash_000020  crash_000020.json  crash_000021  crash_000021.json  crash_000022  crash_000022.json  (+145 more)
VMDragonSlayer/documentation/: 03-modules.md
VMDragonSlayer/documentation/modules/dragonslayer/fuzzing/: vm_fuzzer.md
VMDragonSlayer/dragonslayer/fuzzing/: __init__.py  base_fuzzer.py  corpus_manager.py  coverage_tracker.py  crash_analyzer.py  execution_engine.py  input_generator.py  instrumentation.py  mutation_engine.py  network_fuzzer.py  parallel_engine.py  symbolic_integration.py  taint_integration.py  vm_fuzzer.py
VMDragonSlayer/examples/: advanced_fuzzing_example.py  fuzzing_example.py
VMDragonSlayer/tests/benchmark/: test_fuzzer_benchmark.py
VMDragonSlayer/tests/integration/: test_fuzzer_validation.py  test_fuzzing_integration.py
VMDragonSlayer/tests/test_binaries/: test_vm_binary.py  test_vulnerable_programs.py
VMDragonSlayer/tests/unit/test_fuzzing/: test_fuzzing_components.py
benches/: Cargo.toml
benches/benches/: detection_performance.rs
completions/: README.md  install.sh
docs/: DETECTION_METHODS.md  MITRE_ATTACK_COVERAGE.md  PERFORMANCE_GUIDE.md  RESEARCH_FRAMEWORK.md
examples/: ghost.toml
ghost-cli/: Cargo.toml
ghost-cli/src/: main.rs
ghost-core/: Cargo.toml
ghost-core/src/: anomaly.rs  baseline.rs  behavioral_ml.rs  config.rs  detection.rs  ebpf.rs  error.rs  evasion.rs  hollowing.rs  hooks.rs  lib.rs  live_feeds.rs  memory.rs  mitre_attack.rs  ml_bridge.rs  ml_cloud.rs  neural_memory.rs  output.rs  pe_parser.rs  process.rs  shellcode.rs  streaming.rs  testing.rs  thread.rs  threat_intel.rs  webhook.rs  yara_engine.rs
ghost-core/tests/: anomaly_test.rs  detection_tests.rs  hook_test.rs  macos_process_test.rs  memory_test.rs  shellcode_test.rs
ghost-tui/: Cargo.toml
ghost-tui/src/: app.rs  events.rs  main.rs  ui.rs  ui.rs.bak
ghost_ml/: README.md  __init__.py  requirements.txt
ghost_ml/bridge/: __init__.py  rust_bridge.py
ghost_ml/features/: __init__.py  extractor.py
ghost_ml/inference/: __init__.py  engine.py  ensemble.py
ghost_ml/models/: __init__.py  cnn_shellcode.py  gnn_evasion.py  transformer_polymorphic.py
ghost_ml/training/: __init__.py  dataset.py  metrics.py  trainer.py
ghost_ml/utils/: __init__.py  data_utils.py  model_utils.py
neural_memory/: __init__.py  pyproject.toml  quick_start.py  requirements.txt  setup.py
neural_memory/analytics/: __init__.py  intelligence.py  metrics.py
neural_memory/api/: __init__.py  client.py  endpoints.py  server.py  transfer.py  transfer.py.security_backup
neural_memory/core/: __init__.py  api.py  config.py  exceptions.py  orchestrator.py
neural_memory/enterprise/: __init__.py  api_integration.py  enterprise_architecture.py
neural_memory/gpu/: __init__.py  engine.py  memory.py  optimizer.py  profiler.py
neural_memory/ml/: __init__.py  classifier.py  ensemble.py  model.py  model.py.security_backup  pipeline.py  trainer.py
neural_memory/utils/: __init__.py  memory.py  performance.py  platform.py  validation.py
neural_memory/workflows/: __init__.py  integration.py  manager.py  pipeline.py
output/corpus/: input_000000
rules/: cobalt_strike.yar  evasion.yar  metasploit.yar  process_injection.yar  shellcode.yar
scripts/: train_models.py  train_neural_models.py
