[workspace]
members = [ "ghost-cli",
    "ghost-core", "ghost-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adir Shitrit"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
