[package]
name = "ghost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
yara-scanning = ["yara"]
vendored-openssl = ["reqwest/native-tls-vendored"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
yara = { version = "0.28", optional = true }
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
