[package]
name = "ghost-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal user interface for Ghost process injection detection"

[dependencies]
ghost-core = { path = "../ghost-core" }
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.8"
unicode-width = "0.1"
